--- a/index3.html
+++ b/index3.html
@@ -79,7 +79,7 @@ p {
   box-shadow: 0 1px 2px rgba(0, 0, 0, 0.1);
   height: 100px;
   margin-bottom: 40px;
-  width: 300px;
+  width: 340px;
 }
 
 #legend {
@@ -137,6 +137,7 @@ p {
 <input id='slider' type='range' list="tickmarks" min='2000' max='2016' step='4' value='2000' >
 <output for="slider" id="Election">2000</output>
 <button class="button button4" onclick="Advance()">Play</button>
+<button class="button button4" onclick="StopFunction()">Stop</button>
 </div>
 
 
