--- a/index4.html
+++ b/index4.html
@@ -146,8 +146,8 @@ mapboxgl.accessToken = 'pk.eyJ1Ijoiamprb2hlciIsImEiOiJjanhtM3JncHIwMjY4M3BtbXV0Z
 var map = new mapboxgl.Map({
 container: 'map', // container id
 style: 'mapbox://styles/jjkoher/cjyj6qgen19td1cno5sf4bpke', // stylesheet location
-center: [-95.915, 38.573], // starting position [lng, lat]
-
+center: [-95.915, 38.573], // starting position [lng, lat],
+pitch: 45,
 zoom: 4 // starting zoom
 });
 var Year = "2000";
